updated code to work with latest react and boostrap

--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link href="%PUBLIC_URL%/icon_t118.svg" rel="icon" type="image/x-icon">
-    <link href="%PUBLIC_URL%/icon_t118.svg" rel="shortcut icon" type="image/x-icon">
-
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Retireup Sample API App"
+    <link href="%PUBLIC_URL%/IcIcon.svg" rel="icon" type="image/x-icon" />
+    <link
+      href="%PUBLIC_URL%/IcIcon.svg"
+      rel="shortcut icon"
+      type="image/x-icon"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon_t118.svg" />
+
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Retireup Sample API App" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/IcIcon.svg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
